<resources>

    <string name="app_name">HubbaHubba</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title"> Hubba Hubba</string>
    <string name="logIn"> Log In</string>
    <string name="signUp"> Sign Up</string>
    <string name="facebook"> facebook </string>
    <string name="viewMap"> View Map</string>
  
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="rememberPassword">Remember Password</string>
    <string name="title_activity_log">Log</string>
	<string name="back">Back</string>
	
	<string name="difficulty">Difficulty:</string>
	<string name="dangerLevel">Police:</string>
	<string name="overallRating">Overall:</string>
	<string name="comments">Comments:</string>
	<string name="commentHint">Landing, materials, hazzards, etc.</string>
	
	<string name="addSpot">Add Spot</string>
	<string name="1">1</string>
	<string name="2">2</string>
	<string name="3">3</string>
	<string name="4">4</string>
	<string name="5">5</string>
	<string name="6">6</string>
	<string name="7">7</string>
	<string name="8">8</string>
	<string name="9">9</string>
	<string name="10">10</string>
	<string name="showOff">Show Off:</string>
	<string name="browseButton">Browse</string>
	<string name="browseBar">Upload File</string>
	<string name="locateOnMap">Locate on Map</string>
	
	<string name="address">Address*</string>
	<string name="cityStateZip">City, State, Zip*</string>
	<string name="spotTitle">Spot Title*</string>
	<string name="cancel">Cancel</string>
	<string name="continu">Continue</string>
	
	<!-- Array of Types of Spots -->
	
	<string-array name="spotTypes">
        <item>Hubba</item>
        <item>Handrail</item>
        <item>Flat Rail</item>
        <item>ledge(s)</item>
        <item>Transition</item>
        <item>Miniramp</item>
        <item>Gap</item>
        <item>Stairs</item>
        <item>Skate Park</item>
        <item>Bank</item>
    </string-array>
	
	<!-- End of Array for Types of Spots -->
	
	<string name="name">First and Last Name</string>
	<string name="email">Email</string>
	<string name="keepLoggedIn">Keep Me Logged In</string>
	<string name="confirmPassword">Confirm Password</string>
	
	<string name="listView">List View</string>
	<string name="add">add</string>
	<string name="searchSpots">Search Spots</string>
	<string name="show">Show...</string>
	

</resources>
