<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="#000000" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            tools:context=".MainActivity"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:textColor="#33b5e5" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#000000" >

        <Button
            android:id="@+id/logInButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/logIn"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
    
     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#000000" >

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/signUp"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
    
     
      <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#000000" >

        <Button
            android:id="@+id/connectButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/facebook"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

            <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#000000" >

        <Button
            android:id="@+id/viewMapButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/viewMap"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
</LinearLayout>
