<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#000" >
		
        <Button

            android:layout_alignParentLeft="true"
            android:id = "@+id/backButton"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            tools:context=".MainActivity"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:background="#000"
            android:textColor="#FFF" />
            
        
        <TextView
            android:id = "@+id/ListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listView"
            tools:context=".MainActivity"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:textColor="#FFF" />
    </RelativeLayout>
     
      <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFF"
        android:gravity="left"
        android:layout_marginLeft="10dp">
		
        <!-- this will be a photo instead of "add" eventually -->
        <Button
            android:id="@+id/AddSpot"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
			android:text="@string/add"
            android:layout_toLeftOf="@+id/SearchBar" />

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/SearchBar"
            android:layout_width="wrap_content"
            android:paddingRight="30dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/AddSpot"
            android:hint="@string/searchSpots" />
        
        <!-- this should be a spinner but I can't get them to work -->
        <Button
            android:id="@+id/Show"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
			android:text="@string/show"
            android:layout_toRightOf="@+id/SearchBar" />

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFF"
        android:gravity="left"
        android:layout_marginLeft="10dp">
        
        <ListView
        	android:id="@+id/listView"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >
    	</ListView>
        
   	</RelativeLayout>

</LinearLayout>