<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#000" >
		
        <Button

            android:layout_alignParentLeft="true"
            android:id = "@+id/backButton"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            tools:context=".LogIn"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:background="#000"
            android:textColor="#FFF" />
            
        
        <TextView
            android:id = "@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logIn"
            tools:context=".MainActivity"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:textColor="#FFF" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="#FFF" >

        <TextView
            android:id = "@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            tools:context=".MainActivity"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:textColor="#000" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFF" >

        <EditText
        android:id = "@+id/username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/username" />
    </RelativeLayout>
    
     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFF" >

       <EditText
        android:id = "@+id/password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />

    </RelativeLayout>
    
     
      <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#FFF"
        android:layout_marginRight="90dp">

        <CheckBox
            android:id="@+id/CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/rememberPassword" />

        <TextView
            android:id="@+id/rememberPassword"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignBaseline="@+id/CheckBox"
            android:layout_alignBottom="@+id/CheckBox"
            android:layout_alignParentRight="true"
            android:hint="@string/rememberPassword" />

    </RelativeLayout>
    
    <!-- I can not figure out how to get this to the bottom of the screen -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFF"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/logInButton"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/logIn" />

    </RelativeLayout>

</LinearLayout>