<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#000" >
		
        <Button

            android:layout_alignParentLeft="true"
            android:id = "@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            tools:context=".MainActivity"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:background="#000"
            android:layout_marginLeft="10dp"
            android:textColor="#FFF" />
            
        
        <TextView
            android:id = "@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addSpot"
            tools:context=".MainActivity"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:textColor="#FFF" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FFF"
        android:layout_marginTop="10dp" >
		
        <Button

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAllCaps="true"
            android:id = "@+id/locateOnMap"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:text="@string/locateOnMap"
            android:gravity="center_horizontal"
            tools:context=".MainActivity"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:layout_centerInParent="true"
            android:textSize="30sp"
            android:background="#000"
            android:layout_marginLeft="10dp"
            android:textColor="#FFF" />
            
    </RelativeLayout>
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#FFF" 
        android:layout_marginTop="10dp" >

        <EditText
            android:layout_alignLeft="@id/locateOnMap"
            android:id = "@+id/spotTitle"
            android:layout_width="265dp"
            android:layout_height="25dp"
            android:hint="@string/spotTitle"
            tools:context=".MainActivity"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:lines="1"
            android:background="#FFF"
            android:textColor="#000" 
            android:layout_alignParentBottom="true"/>
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#FFF" 
        android:layout_marginTop="10dp" >

        <EditText
            android:layout_alignLeft="@id/locateOnMap"
            android:id = "@+id/address"
            android:layout_width="265dp"
            android:layout_height="25dp"
            android:hint="@string/address"
            tools:context=".MainActivity"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:lines="1"
            android:background="#FFF"
            android:textColor="#000" 
            android:layout_alignParentBottom="true"/>
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#FFF" 
        android:layout_marginTop="10dp" >

        <EditText
            android:id = "@+id/cityStateZip"
            android:layout_width="265dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/cityStateZip"
            tools:context=".MainActivity"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:lines="1"
            android:background="#FFF"
            android:textColor="#000" 
            android:layout_alignParentBottom="true"/>
        
    </RelativeLayout>
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#FFF"
        android:gravity="bottom"
        android:layout_marginTop="10dp" >
        
	    <Spinner
		    android:id="@+id/spotTypeSpinner"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
	    
	</RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#FFF"
        android:gravity="bottom"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:background="#ccc"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="#000"
            android:textSize="20sp"
            tools:context=".MainActivity" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:background="#ccc"
            android:padding="5dp"
            android:text="@string/continu"
            android:textColor="#000"
            android:textSize="20sp"
            tools:context=".MainActivity" />
    </RelativeLayout>
    
</LinearLayout>